# SpotiAFK-v2

./: Cargo.toml  ReadMe.md  example.env
src/: auth.rs  functions.rs  main.rs  spotifyd.rs
